--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-source-drupal": "^2.0.37",
+    "gatsby": "^3.11.1",
+    "gatsby-link": "^3.11.0",
+    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-source-drupal": "^4.11.0",
+    "lmdb-store": "^1.6.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
